    the '__doc__' attribute on the descriptor.  

  - Usage of version_id_col on a backend that supports 
    cursor.rowcount for execute() but not executemany() now works
    when a delete is issued (already worked for saves, since those
    don't use executemany()). For a backend that doesn't support 
    cursor.rowcount at all, a warning is emitted the same
    as with saves.  [ticket:1761]
    
- sql
  - Restored some bind-labeling logic from 0.5 which ensures
    that tables with column names that overlap another column
    of the form "<tablename>_<columnname>" won't produce 
    errors if column._label is used as a bind name during
    an UPDATE.  Test coverage which wasn't present in 0.5
    has been added.  [ticket:1755]

  - the Numeric type raises an *enormous* warning when expected
    to convert floats to Decimal from a DBAPI that returns floats.
    This includes SQLite, Oracle, Sybase, MS-SQL.
    [ticket:1759]

  - Fixed an error in expression typing which caused an endless
    loop for expressions with two NULL types.
    
- ext
  - the compiler extension now allows @compiles decorators
    on base classes that extend to child classes, @compiles
    decorators on child classes that aren't broken by a 
    @compiles decorator on the base class.
   
  - Declarative will raise an informative error message
    if a non-mapped class attribute is referenced in the
    string-based relationship() arguments.

  - Further reworked the "mixin" logic in declarative to 
    additionally allow __mapper_args__ as a @classproperty
    on a mixin, such as to dynamically assign polymorphic_identity.

- postgresql
  - Postgresql now reflects sequence names associated with 
    SERIAL columns correctly, after the name of of the sequence
    has been changed.  Thanks to Kumar McMillan for the patch.
    [ticket:1071]
    
- oracle
  - Now using cx_oracle output converters so that the
    DBAPI returns natively the kinds of values we prefer: